# cs3210-rustos-public

boot/: Cargo.toml
boot/src/: main.rs
kern/: Cargo.toml  Makefile
kern/src/: allocator.rs  console.rs  fs.rs  gpu.rs  init.rs  main.rs  mutex.rs  param.rs  process.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  tests.rs
kern/src/fs/: sd.rs
kern/src/gpu/: font.rs  framebuffer.rs  gpu.rs  msg.rs  pixel.rs
kern/src/init/: init.s  oom.rs  panic.rs  switch.s  vectors.s
kern/src/process/: context.rs  process.rs  scheduler.rs  stack.rs  state.rs
kern/src/traps/: frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: pagetable.rs
lib/aarch64/src/: lib.rs  regs.rs
lib/allocator/: Cargo.toml
lib/allocator/src/: allocator.rs  lib.rs
lib/allocator/src/allocator/: bin.rs  bump.rs  mutex.rs  tests.rs  util.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: mbr.rs  tests.rs  util.rs
lib/fat32/src/traits/: dummy.rs  fs.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  vfat.rs
lib/kernel_api/: Cargo.toml
lib/kernel_api/src/: lib.rs  syscall.rs
lib/lru_cache/: Cargo.toml
lib/lru_cache/src/: lib.rs  lrucache.rs  tests.rs
lib/pi/: Cargo.toml
lib/pi/src/: common.rs  gpio.rs  interrupt.rs  lib.rs  mailbox.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/shim/: Cargo.toml
lib/stack-vec/: Cargo.toml
lib/stack-vec/src/: lib.rs
lib/ttywrite/: Cargo.toml
lib/ttywrite/src/: main.rs
lib/xmodem/: Cargo.toml
lib/xmodem/src/: lib.rs
tut/0-rustlings/exercises/: test1.rs  test4.rs
tut/0-rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
tut/0-rustlings/exercises/cs140e/: borrow-1.rs  borrow-2.rs  builder.rs  derive.rs  expressions.rs  lifetimes-3.rs  privacy.rs  trait-impl.rs  try.rs  ufcs.rs
tut/0-rustlings/exercises/enums/: enums2.rs  enums3.rs
tut/0-rustlings/exercises/error_handling/: option1.rs
tut/0-rustlings/exercises/iterators/: iterators2.rs  iterators3.rs  iterators4.rs
tut/0-rustlings/exercises/structs/: structs1.rs  structs2.rs
tut/1-blinky/phase3/: blinky.c
tut/1-blinky/phase4/src/: init.rs  main.rs
tut/2-shell/questions/: 1-blinky.md  lifetime.md  push-fails.md
user/: build.sh
user/fib/src/: main.rs  oom.rs
user/fork/: Cargo.toml
user/fork/src/: main.rs
user/hanoi/: Cargo.toml
user/hanoi/src/: main.rs
user/shell/: Cargo.toml
user/shell/src/: cr0.rs  main.rs  oom.rs
