[package]
name = "boot"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Jiarui Li <10175101250@stu.ecnu.edu.cn>",
]
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true

[dependencies]
pi = { path = "../lib/pi/" }
shim = { path = "../lib/shim", features = ["no_std"] }
xmodem = { path = "../lib/xmodem", features = ["no_std"] }
