[package]
name = "allocator"
version = "0.1.0"
authors = ["Willendless <317500141@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shim = { path = "../../lib/shim", features = ["no_std"] }
kernel_api = { path = "../../lib/kernel_api" }

[dev-dependencies]
shim = { path = "../../lib/shim" }

[features]
default = ["user-space"]

"user-space" = []
