[package]
name = "lru_cache"
version = "0.1.0"
authors = ["Willendless <317500141@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shim = { path = "../shim", features = ["alloc"] }
hashbrown = "0.6.3"

[features]
no_std = ["shim/no_std"]
