[package]
name = "shim"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
cfg-if = "1.0"
# core_io = { version = "0.1.20190701", package = "core_io", optional = true }
core_io = { git = "https://github.com/Willendless/rust-core_io", package = "core_io", optional = true }

[dev-dependencies]
hashbrown = "0.9.1"

[features]
no_std = ["core_io"]
alloc = ["core_io/alloc", "core_io/collections"]
